fixes fonts on several pages, fixes spacing on sevral panels

--- a/stylesheets/community.css
+++ b/stylesheets/community.css
@@ -119,8 +119,6 @@ p.subtitle {
   font-weight: bold;
 }
 h5#subtitle1, h5#subtitle2 {
-  font-family: "stag";
-  font-weight: 300;
   font-size: 200%;
   color: black;
 }
@@ -158,10 +156,6 @@ a.community-page_block3-link:hover {
   font-size: 1.5em;
 }
 
-h2.community-page-individual_block1-text {
-  font-family: "stag";
-  font-weight: 400;
-}
 .community-page-individual_block1-image {
   max-width: 100%;
   margin: auto;
@@ -171,8 +165,6 @@ div.community-page-individual_block3-text {
   background: #e9e9e9;
   width: 100%;
   font-size: 16px;
-  font-family: "proxima";
-  font-weight: 400;
   text-align: left;
   line-height: 28px;
   margin: 0 !important;
@@ -218,14 +210,11 @@ img#wistia_48.thumbnail_img {
   background-position: center;
   background-color: black;
 }
-p.community-block-quote {
+h3.community-block-quote {
   border-top: #e9e9e9 4px solid;
   border-bottom: #e9e9e9 4px solid;
   padding: 10px 0;
-  font-family: "stag";
-  font-weight: 400;
   text-align: left;
-  font-weight: lighter;
   margin: 2% 0;
   font-size: 1.3em;
   line-height: 201%;
