--- a/stylesheets/impact.css
+++ b/stylesheets/impact.css
@@ -1,7 +1,7 @@
 .impact-splash {
   background-image: url(/images/newres/differentbg1.png);
   min-height: 50vh;
-  max-height: 400px;
+  max-height: 600px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -14,8 +14,6 @@
 
 .impact-section-two p {
   font-size: 18px;
-  font-family: proxima;
-  font-weight: 500;
   letter-spacing: 1px;
   padding: 40px 10px 15px 10px;
   max-width: 80%;
@@ -37,8 +35,6 @@
 
 .impact-3-img h5 {
   font-size: 1.2em;
-  font-family: stag;
-  font-weight: 400;
   line-height: 1.4em;
   max-width: 80%;
   text-align: center;
@@ -79,7 +75,7 @@
 }
 
 .impact-guild-tracker {
-  background-image: url('/images/newres/impactbg5.png'); 
+  background-image: url('/images/newres/impactbg5.png');
   min-height: 50vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -91,18 +87,18 @@
 }
 
 .impact-guild-tracker h2 {
-  font-size: 40px; 
-  padding-top: 40px; 
-  letter-spacing: 2px; 
-  color: white; 
-  margin: 0px 40px; 
-  border-bottom: 8px solid #f2b317; 
-  width: 295px; 
+  font-size: 40px;
+  padding-top: 40px;
+  letter-spacing: 2px;
+  color: white;
+  margin: 0px 40px;
+  border-bottom: 8px solid #f2b317;
+  width: 295px;
   margin-bottom: 40px;
 }
 
 .impact-guild-tracker p {
-  color: white; 
+  color: white;
   font-size: 18px;
 }
 
@@ -111,7 +107,7 @@
 }
 
 .impact-income-increase p {
-  padding: 20px; 
+  padding: 20px;
   background: white;
 }
 
@@ -138,7 +134,7 @@
 }
 
 .impact-income-increase {
-  background-image: url("/images/impact_bgDots.png"); 
+  background-image: url("/images/impact_bgDots.png");
   background-repeat: repeat;
   padding: 60px 0;
 }
@@ -159,6 +155,7 @@
   }
   .impact-splash h2 {
     max-width: 200px;
+    padding-top: 15px;
   }
   .impact-guild-tracker h2 {
     width: 200px;
